--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,7 +11,7 @@
     />
     <meta name="author" content="Elaine Costa">
     <meta name="keywords" content="sites, web, desenvolvimento, HTML, CSS, React, hofs, context-api">
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/8-2-star-wars-logo-png.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/8-2-star-wars-logo.png">
     
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
