--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="author" content="Elaine Costa">
     <meta name="keywords" content="sites, web, desenvolvimento, HTML, CSS, React, hofs, context-api">
-    <link rel="icon" type="image/png" sizes="16x16" href="/public/8-2-star-wars-logo.png">
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="/public/8-2-star-wars-logo.png"> -->
     
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
